<resources>
    <string name="app_name">FuelCardsHolder</string>
    <string name="cards">Карты</string>
    <string name="delete_button">delete button</string>
    <string name="adDeleteMessage">Удалить?</string>
    <string name="adYes">Да</string>
    <string name="adNo">Нет</string>
    <string name="card_name">Имя карты</string>
    <string name="card_number">Номер карты</string>
    <string name="adAdd">Добавить</string>
    <string name="adCancel">Отмена</string>
    <string name="date">Дата</string>
    <string name="change">Изменение</string>
    <string name="balance">Баланс</string>
    <string name="adOutcome">Расход</string>
    <string name="adIncome">Приход</string>
    <string name="adAddCard">Добавление карты</string>
    <string name="adAddNote">Добавление записи</string>
    <string name="lit">л</string>
    <string name="wrongData">Не верные данные</string>
    <string name="share">Отправить</string>
    <string name="cardNumber">Карта №</string>
    <string name="lastChanges">Последние изменения:</string>
    <string name="exportDB">Экспорт БД</string>
    <string name="importDB">Импорт БД</string>
    <string name="settings">Настройки</string>
    <string name="correction">Редактирование</string>
    <string name="record">Записать</string>
    <string name="expired">Действует до:</string>

    <string-array name="fuelType">
        <item>ДТ</item>
        <item>АИ-76</item>
        <item>АИ-80</item>
        <item>АИ-92</item>
        <item>АИ-95</item>
        <item>АИ-98</item>
        <item>АИ-100</item>
    </string-array>
</resources>